--- a/src/index.html
+++ b/src/index.html
@@ -25,8 +25,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body>
-  <p style="font-size:30px">Most Popular Articles Of The New York Times</p>
+<body><div align="center">
+  <img src="https://static.microventures.com/img/blog/new-york-times-logo.png" width="500">
+  <p style="font-size:30px">Most Popular Articles </p></div>
   <app-root></app-root>
 </body>
 </html>
